--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
   <div class="container">
       <h1>A Future of Visual Storytelling</h1>
    
-      <p>In the future, anyone with a story idea will be able to develop and visualize their story without technical limitations. They'll be able to <span class="sidenote">This is a sidenote and stuff.</span>direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
+      <p>In the future, anyone with a story idea will be able to develop and visualize their story without technical limitations. They'll be able to direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
 
-      <p>In the future, anyone with a set of storyboards will be able to pick up a camera and start shooting. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
+      <p>In the future, <span name="storyboards">anyone with a set of storyboards</span> will be able to pick up a camera and start shooting. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
+
+      <aside name="storyboards">
+        This is a sidenote. It explains some stuff. Anything can go here!
+      </aside>
 
       <p>In the future, any person with a story idea will be able to produce their stories into full reality. They won't be restricted by where they came from or who they are now, but rather, empowered because of where they came from and who they are now. They won't worry about money or possessing technology. They will have a place to create stories, find others to work with, and find audiences that connect with their work. They will be free to play and explore creative story ideas ultimately creating visual stories with their most valuable asset: their unique point of view.</p>
 
-      <p>You don't need anyone else's permission or money to get started. And if you're smart and creative you don't need anyone else's permission or money to produce an entire visual story to completion.</p>
+      <p>You don't need <span name="permission">anyone else's permission</span> or money to get started. And if you're smart and creative you don't need anyone else's permission or money to produce an entire visual story to completion.</p>
+
+      <aside name="permission">
+        This is another sidenote. It explains some stuff. Anything can go here!
+      </aside>
 
       <h2>1. Story Development</h2>
       <p>The story is the most important part of visual storytelling. Does that statement sound as basic to you as it feels for me to write it? I hope so, because it should be plain as day.</p>
@@ -127,6 +135,7 @@
 
 
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
