add example table of contents

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title></title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- photoswipe -->
@@ -12,15 +12,111 @@
   <script src="vendor/photoswipe/photoswipe-ui-default.min.js"></script>
 
   <link rel="stylesheet" href="css/main.css">
+
+  <title></title>
 </head>
 
 <body>
   <div class="container">
-      <h1>A Future of Visual Storytelling</h1>
-   
+      <div class="masthead">
+        <div class="measure mobile-pad">
+            <div class="cover">
+                <div class="centered">
+                    <h1>A Future of Visual Storytelling</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="measure relative mobile-pad">
+
+      <nav class="toc table-of-contents">
+        <ol>
+            <li>
+            <a href="#a-future-of-visual-storytelling">
+                A Future of Visual Storytelling</a
+            >
+            <ol>
+                <li>
+                <a href="#some-side-notes"> Some Side Notes</a>
+                <ol>
+                    <li>
+                    <a href="#this-is-not-the-future%2C-it-is-a-future.">
+                        This is not the future, it is a future.</a
+                    >
+                    </li>
+                    <li>
+                    <a href="#why-is-visual-storytelling-important%3F">
+                        Why is visual storytelling important?</a
+                    >
+                    </li>
+                    <li>
+                    <a href="#what-is-a-visual-story%3F"> What is a Visual Story?</a>
+                    </li>
+                </ol>
+                </li>
+            </ol>
+            </li>
+            <li>
+            <a href="#story-development">Story Development</a>
+            <ol>
+                <li><a href="#writing-visually"> Writing Visually</a></li>
+                <li><a href="#importance-of-play"> Importance of Play</a></li>
+                <li><a href="#collaboration"> Collaboration</a></li>
+                <li><a href="#music-sooner-than-later"> Music Sooner Than Later</a></li>
+                <li><a href="#iteration"> Iteration</a></li>
+            </ol>
+            </li>
+            <li>
+            <a href="#pre-production">Pre-Production</a>
+            <ol>
+                <li><a href="#casting"> Casting</a></li>
+                <li>
+                <a href="#edited-animatic-readings"> Edited Animatic Readings</a>
+                </li>
+                <li><a href="#proto-production"> Proto-production</a></li>
+                <li><a href="#testing-and-iterating"> Testing and Iterating</a></li>
+                <li><a href="#pre-production-work"> Pre-production work</a></li>
+            </ol>
+            </li>
+            <li>
+            <a href="#production">Production</a>
+            <ol>
+                <li>
+                <a href="#everyone-on-the-same-team"> Everyone on the same team</a>
+                </li>
+                <li><a href="#fluid-process"> Fluid process</a></li>
+                <li>
+                <a href="#technology-that-fades-into-the-background">
+                    Technology that fades into the background</a
+                >
+                </li>
+                <li><a href="#virtual-production"> Virtual Production</a></li>
+                <li><a href="#robotics"> Robotics</a></li>
+                <li><a href="#on-set-editing"> On Set Editing</a></li>
+            </ol>
+            </li>
+            <li>
+            <a href="#post-production">Post Production</a>
+            <ol>
+                <li><a href="#editing"> Editing</a></li>
+                <li><a href="#compositing"> Compositing</a></li>
+                <li><a href="#ai"> AI</a></li>
+            </ol>
+            </li>
+            <li>
+            <a href="#distribution">Distribution</a>
+            <ol>
+                <li><a href="#where-are-the-people%3F"> Where are the people?</a></li>
+                <li><a href="#first-act-on-youtube"> First Act on Youtube</a></li>
+            </ol>
+            </li>
+        </ol>
+      </nav>
+
       <p>In the future, anyone with a story idea will be able to develop and visualize their story without technical limitations. They'll be able to direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
 
-      <p>In the future, <span name="storyboards">anyone with a set of storyboards</span> will be able to pick up a camera and start shooting. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
+      <p>In the future, <span name="storyboards">anyone with a set of storyboards will be able to pick up a camera and start shooting</span>. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
 
       <aside name="storyboards">
         This is a sidenote. It explains some stuff. Anything can go here!
