add another exampel sidenote

--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
         </ol>
       </nav>
 
-      <p>In the future, anyone with a story idea will be able to develop and visualize their story without technical limitations. They'll be able to direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
+      <p>In the future, <span name="story-idea">anyone with a story idea</span> will be able to develop and visualize their story without technical limitations. They'll be able to direct a visual story by themselves. They'll be able to collaborate real time, building virtual scenes with people next to them or in different countries. They'll be able to iterate freely and easily to make their stories better.</p>
+
+      <aside name="story-idea">
+        This is a sidenote. It explains some stuff. Anything can go here!
+      </aside>
 
       <p>In the future, <span name="storyboards">anyone with a set of storyboards will be able to pick up a camera and start shooting</span>. They won't need to find or build real sets. They won't need to be in the same country as the performers. As they shoot each shot, the scene will be roughly edited together, in real time. The technology will become invisible. They will only need to worry about the story and the performance.</p>
 
