add missing closing element

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       
       This will take more work than usually required of a typical narrative story. It's important that they are willing to do this.
 
-
+    </div>
 
   </div>
 
