--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container relative">
       <div class="masthead">
         <div class="measure mobile-pad">
           <div class="cover">
