--- a/index.html
+++ b/index.html
@@ -19,24 +19,28 @@
   </head>
 
   <body>
-    <div class="container relative">
+    <div class="container">
       <header>
         <div class="masthead">
-          <div class="measure-wide mobile-pad">
-            <nav class="primary-nav flex flex-row justify-between">
-              <a href="/" class="logo">
+          <!-- TODO style for small sizes, extract utility classes -->
+          <div class="primary-nav flex flex-row justify-between">
+            <div class="flex" style="justify-content: flex-end">
+
+              <a href="/" class="logo" style="margin-right: 2rem">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 109.175 13.644"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><polygon points="9.992 0 19.628 0 25.37 8.126 19.632 13.644 9.992 0"></polygon><polygon points="0 0 8.067 0 12.873 6.803 8.07 11.422 0 0"></polygon><path d="M35.777,4.9l1.287,4.613L38.573,4.9H40.1l1.5,4.613,1.3-4.613h1.789L42.627,11.65H40.782L39.328,7,37.889,11.65H36.043L33.988,4.9Z" transform="translate(0 -1.594)"></path><path d="M46.834,11.343a3.231,3.231,0,0,1-1.244-1.286,3.877,3.877,0,0,1,0-3.565,3.237,3.237,0,0,1,1.244-1.286,3.944,3.944,0,0,1,3.753,0,3.268,3.268,0,0,1,1.237,1.279,3.7,3.7,0,0,1,.434,1.783,3.733,3.733,0,0,1-.434,1.789,3.247,3.247,0,0,1-1.237,1.286,3.944,3.944,0,0,1-3.753,0Zm3.159-1.628a2.177,2.177,0,0,0,.476-1.447,2.179,2.179,0,0,0-.476-1.44,1.722,1.722,0,0,0-2.565,0,2.163,2.163,0,0,0-.483,1.44,2.16,2.16,0,0,0,.483,1.439,1.73,1.73,0,0,0,2.565.008Z" transform="translate(0 -1.594)"></path><path d="M55.222,4.9V5.71a2.171,2.171,0,0,1,.957-.72A3.66,3.66,0,0,1,57.6,4.731,2.2,2.2,0,0,1,59.24,5.3a2.18,2.18,0,0,1,.552,1.587V11.65H58.059v-4.1a1.329,1.329,0,0,0-.322-.993,1.3,1.3,0,0,0-.936-.307,1.837,1.837,0,0,0-1.083.349,1.115,1.115,0,0,0-.5.964V11.65H53.5V4.9Z" transform="translate(0 -1.594)"></path><path d="M67.955,2.327V11.65H66.236v-.8a2.6,2.6,0,0,1-2.111.964,2.807,2.807,0,0,1-2.607-1.649,4.327,4.327,0,0,1-.385-1.9A4.2,4.2,0,0,1,61.525,6.4a2.965,2.965,0,0,1,1.069-1.23,2.781,2.781,0,0,1,1.531-.434,2.857,2.857,0,0,1,1.146.224,2.725,2.725,0,0,1,.965.74V2.327ZM65.977,6.968a1.531,1.531,0,0,0-.622-.545,1.665,1.665,0,0,0-.7-.168,1.58,1.58,0,0,0-1.251.552,2.144,2.144,0,0,0-.483,1.461,2.146,2.146,0,0,0,.483,1.461,1.583,1.583,0,0,0,1.251.551,1.756,1.756,0,0,0,1.1-.37,1.651,1.651,0,0,0,.482-1.377v-.6A1.675,1.675,0,0,0,65.977,6.968Z" transform="translate(0 -1.594)"></path><path d="M75.684,10.867a3.359,3.359,0,0,1-1.251.706,4.893,4.893,0,0,1-1.53.245,3.818,3.818,0,0,1-1.838-.44,3.227,3.227,0,0,1-1.286-1.244,3.632,3.632,0,0,1-.469-1.866,3.653,3.653,0,0,1,.447-1.789A3.321,3.321,0,0,1,71,5.2a3.5,3.5,0,0,1,1.8-.468,3.33,3.33,0,0,1,1.747.461,3.149,3.149,0,0,1,1.2,1.3,4.239,4.239,0,0,1,.425,1.944v.376H71.114a1.776,1.776,0,0,0,.615,1.175,1.991,1.991,0,0,0,1.356.461,3.059,3.059,0,0,0,.992-.175,2.123,2.123,0,0,0,.839-.5ZM74.028,6.541a1.644,1.644,0,0,0-1.237-.468,1.533,1.533,0,0,0-1.195.483,1.828,1.828,0,0,0-.5,1.083H74.51A1.636,1.636,0,0,0,74.028,6.541Z" transform="translate(0 -1.594)"></path><path d="M79.208,4.9v.8a2.475,2.475,0,0,1,.95-.7,2.979,2.979,0,0,1,1.216-.266V6.423a2.04,2.04,0,0,0-.49-.057,2.551,2.551,0,0,0-.719.119,2.05,2.05,0,0,0-.678.336.621.621,0,0,0-.279.5V11.65h-1.72V4.9Z" transform="translate(0 -1.594)"></path><path d="M87.8,4.9V9.022a1.251,1.251,0,0,0,.322.965,1.361,1.361,0,0,0,.95.293,1.971,1.971,0,0,0,1.083-.307,1.018,1.018,0,0,0,.482-.922V4.9h1.72V11.65H90.64v-.8a2.451,2.451,0,0,1-.97.692,3.533,3.533,0,0,1-1.406.272,2.186,2.186,0,0,1-1.635-.559,2.146,2.146,0,0,1-.545-1.566V4.9Z" transform="translate(0 -1.594)"></path><path d="M95.869,4.9V5.71a2.171,2.171,0,0,1,.957-.72,3.656,3.656,0,0,1,1.419-.259,2.2,2.2,0,0,1,1.642.566,2.18,2.18,0,0,1,.552,1.587V11.65H98.706v-4.1a1.329,1.329,0,0,0-.322-.993,1.3,1.3,0,0,0-.936-.307,1.837,1.837,0,0,0-1.083.349,1.115,1.115,0,0,0-.5.964V11.65h-1.72V4.9Z" transform="translate(0 -1.594)"></path><path d="M102.319,2.2a1.238,1.238,0,0,1,1.531,0,1.063,1.063,0,0,1,.266.783,1.068,1.068,0,0,1-.266.776,1.213,1.213,0,0,1-1.531,0,1.05,1.05,0,0,1-.273-.776A1.046,1.046,0,0,1,102.319,2.2Zm1.615,2.7V11.65h-1.72V4.9Z" transform="translate(0 -1.594)"></path><path d="M106.072,3.054h1.733V4.9h1.37V6.408h-1.37v2.95a.871.871,0,0,0,.16.552.55.55,0,0,0,.456.2h.74V11.65h-1.216a1.929,1.929,0,0,1-1.4-.461,1.824,1.824,0,0,1-.475-1.37V6.408h-1.118V4.9h1.118Z" transform="translate(0 -1.594)"></path></g></g></svg>
               </a>
 
-              <ul class="menu">
+            </div>
+            <div class="flex">
+              <ul class="menu flex" style="margin-left: -3rem">
                 <li><a href="#">Stories</a></li>
                 <li><a href="#">Technology</a></li>
                 <li><a href="#">About</a></li>
               </ul>
-            </nav>
+            </div>
           </div>
 
-          <div class="measure mobile-pad">
+          <div class="mobile-pad" style="width: var(--body-measure);">
             <div class="cover">
               <div class="centered">
                 <h1>A Future of Visual Storytelling</h1>
@@ -45,107 +49,111 @@
           </div>
         </div>
       </header>
-      <main>
-        <div class="measure relative mobile-pad">
-          <nav class="toc table-of-contents">
-            <ol>
-              <li>
-                <a href="#a-future-of-visual-storytelling">
-                  A Future of Visual Storytelling</a
-                >
-                <ol>
-                  <li>
-                    <a href="#some-side-notes"> Some Side Notes</a>
-                    <ol>
-                      <li>
-                        <a href="#this-is-not-the-future%2C-it-is-a-future.">
-                          This is not the future, it is a future.</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#why-is-visual-storytelling-important%3F">
-                          Why is visual storytelling important?</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#what-is-a-visual-story%3F">
-                          What is a Visual Story?</a
-                        >
-                      </li>
-                    </ol>
-                  </li>
-                </ol>
-              </li>
-              <li>
-                <a href="#story-development">Story Development</a>
-                <ol>
-                  <li><a href="#writing-visually"> Writing Visually</a></li>
-                  <li><a href="#importance-of-play"> Importance of Play</a></li>
-                  <li><a href="#collaboration"> Collaboration</a></li>
-                  <li>
-                    <a href="#music-sooner-than-later">
-                      Music Sooner Than Later</a
-                    >
-                  </li>
-                  <li><a href="#iteration"> Iteration</a></li>
-                </ol>
-              </li>
-              <li>
-                <a href="#pre-production">Pre-Production</a>
-                <ol>
-                  <li><a href="#casting"> Casting</a></li>
-                  <li>
-                    <a href="#edited-animatic-readings">
-                      Edited Animatic Readings</a
-                    >
-                  </li>
-                  <li><a href="#proto-production"> Proto-production</a></li>
-                  <li>
-                    <a href="#testing-and-iterating"> Testing and Iterating</a>
-                  </li>
-                  <li><a href="#pre-production-work"> Pre-production work</a></li>
-                </ol>
-              </li>
-              <li>
-                <a href="#production">Production</a>
-                <ol>
-                  <li>
-                    <a href="#everyone-on-the-same-team">
-                      Everyone on the same team</a
-                    >
-                  </li>
-                  <li><a href="#fluid-process"> Fluid process</a></li>
-                  <li>
-                    <a href="#technology-that-fades-into-the-background">
-                      Technology that fades into the background</a
-                    >
-                  </li>
-                  <li><a href="#virtual-production"> Virtual Production</a></li>
-                  <li><a href="#robotics"> Robotics</a></li>
-                  <li><a href="#on-set-editing"> On Set Editing</a></li>
-                </ol>
-              </li>
-              <li>
-                <a href="#post-production">Post Production</a>
-                <ol>
-                  <li><a href="#editing"> Editing</a></li>
-                  <li><a href="#compositing"> Compositing</a></li>
-                  <li><a href="#ai"> AI</a></li>
-                </ol>
-              </li>
-              <li>
-                <a href="#distribution">Distribution</a>
-                <ol>
-                  <li>
-                    <a href="#where-are-the-people%3F"> Where are the people?</a>
-                  </li>
-                  <li>
-                    <a href="#first-act-on-youtube"> First Act on Youtube</a>
-                  </li>
-                </ol>
-              </li>
-            </ol>
-          </nav>
+
+      <div class="left-sidebar flex flex-row" style="justify-content: flex-end; align-items: flex-start">
+        <nav class="toc table-of-contents">
+          <ol>
+            <li>
+              <a href="#a-future-of-visual-storytelling">
+                A Future of Visual Storytelling</a
+              >
+              <ol>
+                <li>
+                  <a href="#some-side-notes"> Some Side Notes</a>
+                  <ol>
+                    <li>
+                      <a href="#this-is-not-the-future%2C-it-is-a-future.">
+                        This is not the future, it is a future.</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#why-is-visual-storytelling-important%3F">
+                        Why is visual storytelling important?</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#what-is-a-visual-story%3F">
+                        What is a Visual Story?</a
+                      >
+                    </li>
+                  </ol>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <a href="#story-development">Story Development</a>
+              <ol>
+                <li><a href="#writing-visually"> Writing Visually</a></li>
+                <li><a href="#importance-of-play"> Importance of Play</a></li>
+                <li><a href="#collaboration"> Collaboration</a></li>
+                <li>
+                  <a href="#music-sooner-than-later">
+                    Music Sooner Than Later</a
+                  >
+                </li>
+                <li><a href="#iteration"> Iteration</a></li>
+              </ol>
+            </li>
+            <li>
+              <a href="#pre-production">Pre-Production</a>
+              <ol>
+                <li><a href="#casting"> Casting</a></li>
+                <li>
+                  <a href="#edited-animatic-readings">
+                    Edited Animatic Readings</a
+                  >
+                </li>
+                <li><a href="#proto-production"> Proto-production</a></li>
+                <li>
+                  <a href="#testing-and-iterating"> Testing and Iterating</a>
+                </li>
+                <li><a href="#pre-production-work"> Pre-production work</a></li>
+              </ol>
+            </li>
+            <li>
+              <a href="#production">Production</a>
+              <ol>
+                <li>
+                  <a href="#everyone-on-the-same-team">
+                    Everyone on the same team</a
+                  >
+                </li>
+                <li><a href="#fluid-process"> Fluid process</a></li>
+                <li>
+                  <a href="#technology-that-fades-into-the-background">
+                    Technology that fades into the background</a
+                  >
+                </li>
+                <li><a href="#virtual-production"> Virtual Production</a></li>
+                <li><a href="#robotics"> Robotics</a></li>
+                <li><a href="#on-set-editing"> On Set Editing</a></li>
+              </ol>
+            </li>
+            <li>
+              <a href="#post-production">Post Production</a>
+              <ol>
+                <li><a href="#editing"> Editing</a></li>
+                <li><a href="#compositing"> Compositing</a></li>
+                <li><a href="#ai"> AI</a></li>
+              </ol>
+            </li>
+            <li>
+              <a href="#distribution">Distribution</a>
+              <ol>
+                <li>
+                  <a href="#where-are-the-people%3F"> Where are the people?</a>
+                </li>
+                <li>
+                  <a href="#first-act-on-youtube"> First Act on Youtube</a>
+                </li>
+              </ol>
+            </li>
+          </ol>
+        </nav>
+      </div>
+
+      <main class="mobile-pad relative">
+        <article>
 
           <p>
             In the future,
@@ -314,6 +322,7 @@
             is often near impossible to do in words.
           </p>
 
+          <p>
           The downside of drawing images to synthesize stories is that you need to
           be able to draw. However, I have been assured by many story artists that
           the important component of "Story Artist" is "Story". A great
@@ -477,11 +486,15 @@
           want them to be able to iterate on the story with you. You want them to
           make the story better. This will take more work than usually required of
           a typical narrative story. It's important that they are willing to do
-          this.
-        </div>
+          this.</p>
+        </article>
       </main>
+
+      <div class="right-sidebar">
+      </div>
+
       <footer>
-        <div class="measure-wide mobile-pad flex">
+        <div class="mobile-pad flex">
           <small class="text-center w-full">
             © 2020 Wonder Unit, Inc. All rights reserved.
           </small>
@@ -557,5 +570,10 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+      if (module.hot) {
+        module.hot.accept()
+      }
+    </script>
   </body>
 </html>
