guess what? tweaking again
- try tighter article text measure
- set max width for left and right sidebar
- show sidenotes at 768px
- add longer placeholder text for testing

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <li><a href="#fluid-process"> Fluid process</a></li>
                 <li>
                   <a href="#technology-that-fades-into-the-background">
-                    Technology that fades into the background</a
+                    Technology that fades into the background. Furlong furlong focal for the genuflect profound of the motif aloof and offers. Gnome gnome gondola for the impugn logos of the unplug analog and smuggle. Human human hoist for the buddhist alcohol of the riyadh caliph and bathhouse. Inlet inlet iodine for the quince champion of the ennui scampi and shiite. </a
                   >
                 </li>
                 <li><a href="#virtual-production"> Virtual Production</a></li>
@@ -181,7 +181,7 @@
           </p>
 
           <aside name="storyboards">
-            This is a sidenote. It explains some stuff. Anything can go here!
+            This is a sidenote. It explains some stuff. Anything can go here! Angel Adept Blind Bodice Clique Coast Dunce Docile Enact Eosin Furlong Focal Gnome Gondola Human Hoist Inlet Iodine Justin Jocose Knoll Koala Linden Loads Milliner Modal Number Nodule Onset Oddball Pneumo Poncho Quanta Qophs Rhone Roman Snout Sodium Tundra Tocsin Uncle Udder Vulcan Vocal Whale Woman Xmas Xenon Yunnan Young Zloty Zodiac.
           </aside>
 
           <p>
