--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="body-measure mobile-pad">
             <div class="cover">
               <div class="centered">
-                <h1>A Future of Visual Storytelling</h1>
+                <h1 class="headline">A Future of Visual Storytelling</h1>
               </div>
             </div>
           </div>
