--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </header>
 
-      <div class="left-sidebar flex flex-row justify-end items-start">
+      <div class="left-sidebar flex-row justify-end items-start">
         <nav class="toc table-of-contents">
           <ol>
             <li>
