column width and grid width figures

--- a/index.html
+++ b/index.html
@@ -49,117 +49,116 @@
         </div>
       </header>
 
-      <div class="left-sidebar flex-row justify-end items-start">
-        <nav class="toc table-of-contents">
-          <ol>
-            <li>
-              <a href="#a-future-of-visual-storytelling">
-                A Future of Visual Storytelling</a
-              >
-              <ol>
-                <li>
-                  <a href="#some-side-notes"> Some Side Notes</a>
-                  <ol>
-                    <li>
-                      <a href="#this-is-not-the-future%2C-it-is-a-future.">
-                        This is not the future, it is a future.</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#why-is-visual-storytelling-important%3F">
-                        Why is visual storytelling important?</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#what-is-a-visual-story%3F">
-                        What is a Visual Story?</a
-                      >
-                    </li>
-                  </ol>
-                </li>
-              </ol>
-            </li>
-            <li>
-              <a href="#story-development">Story Development</a>
-              <ol>
-                <li><a href="#writing-visually"> Writing Visually</a></li>
-                <li><a href="#importance-of-play"> Importance of Play</a></li>
-                <li><a href="#collaboration"> Collaboration</a></li>
-                <li>
-                  <a href="#music-sooner-than-later">
-                    Music Sooner Than Later</a
-                  >
-                </li>
-                <li><a href="#iteration"> Iteration</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#pre-production">Pre-Production</a>
-              <ol>
-                <li><a href="#casting"> Casting</a></li>
-                <li>
-                  <a href="#edited-animatic-readings">
-                    Edited Animatic Readings</a
-                  >
-                </li>
-                <li><a href="#proto-production"> Proto-production</a></li>
-                <li>
-                  <a href="#testing-and-iterating"> Testing and Iterating</a>
-                </li>
-                <li><a href="#pre-production-work"> Pre-production work</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#production">Production</a>
-              <ol>
-                <li>
-                  <a href="#everyone-on-the-same-team">
-                    Everyone on the same team</a
-                  >
-                </li>
-                <li><a href="#fluid-process"> Fluid process</a></li>
-                <li>
-                  <a href="#technology-that-fades-into-the-background">
-                    Technology that fades into the background. Furlong furlong focal for the genuflect profound of the motif aloof and offers. Gnome gnome gondola for the impugn logos of the unplug analog and smuggle. Human human hoist for the buddhist alcohol of the riyadh caliph and bathhouse. Inlet inlet iodine for the quince champion of the ennui scampi and shiite. </a
-                  >
-                </li>
-                <li><a href="#virtual-production"> Virtual Production</a></li>
-                <li><a href="#robotics"> Robotics</a></li>
-                <li><a href="#on-set-editing"> On Set Editing</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#post-production">Post Production</a>
-              <ol>
-                <li><a href="#editing"> Editing</a></li>
-                <li><a href="#compositing"> Compositing</a></li>
-                <li><a href="#ai"> AI</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#distribution">Distribution</a>
-              <ol>
-                <li>
-                  <a href="#where-are-the-people%3F"> Where are the people?</a>
-                </li>
-                <li>
-                  <a href="#first-act-on-youtube"> First Act on Youtube</a>
-                </li>
-              </ol>
-            </li>
-          </ol>
-        </nav>
-      </div>
+      <main class="relative">
 
-      <main class="mobile-pad relative">
-        <article>
+        <div class="left-sidebar">
+          <nav class="toc table-of-contents">
+            <ol>
+              <li>
+                <a href="#a-future-of-visual-storytelling">
+                  A Future of Visual Storytelling</a
+                >
+                <ol>
+                  <li>
+                    <a href="#some-side-notes"> Some Side Notes</a>
+                    <ol>
+                      <li>
+                        <a href="#this-is-not-the-future%2C-it-is-a-future.">
+                          This is not the future, it is a future.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#why-is-visual-storytelling-important%3F">
+                          Why is visual storytelling important?</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#what-is-a-visual-story%3F">
+                          What is a Visual Story?</a
+                        >
+                      </li>
+                    </ol>
+                  </li>
+                </ol>
+              </li>
+              <li>
+                <a href="#story-development">Story Development</a>
+                <ol>
+                  <li><a href="#writing-visually"> Writing Visually</a></li>
+                  <li><a href="#importance-of-play"> Importance of Play</a></li>
+                  <li><a href="#collaboration"> Collaboration</a></li>
+                  <li>
+                    <a href="#music-sooner-than-later">
+                      Music Sooner Than Later</a
+                    >
+                  </li>
+                  <li><a href="#iteration"> Iteration</a></li>
+                </ol>
+              </li>
+              <li>
+                <a href="#pre-production">Pre-Production</a>
+                <ol>
+                  <li><a href="#casting"> Casting</a></li>
+                  <li>
+                    <a href="#edited-animatic-readings">
+                      Edited Animatic Readings</a
+                    >
+                  </li>
+                  <li><a href="#proto-production"> Proto-production</a></li>
+                  <li>
+                    <a href="#testing-and-iterating"> Testing and Iterating</a>
+                  </li>
+                  <li><a href="#pre-production-work"> Pre-production work</a></li>
+                </ol>
+              </li>
+              <li>
+                <a href="#production">Production</a>
+                <ol>
+                  <li>
+                    <a href="#everyone-on-the-same-team">
+                      Everyone on the same team</a
+                    >
+                  </li>
+                  <li><a href="#fluid-process"> Fluid process</a></li>
+                  <li>
+                    <a href="#technology-that-fades-into-the-background">
+                      Technology that fades into the background. Furlong furlong focal for the genuflect profound of the motif aloof and offers. Gnome gnome gondola for the impugn logos of the unplug analog and smuggle. Human human hoist for the buddhist alcohol of the riyadh caliph and bathhouse. Inlet inlet iodine for the quince champion of the ennui scampi and shiite. </a
+                    >
+                  </li>
+                  <li><a href="#virtual-production"> Virtual Production</a></li>
+                  <li><a href="#robotics"> Robotics</a></li>
+                  <li><a href="#on-set-editing"> On Set Editing</a></li>
+                </ol>
+              </li>
+              <li>
+                <a href="#post-production">Post Production</a>
+                <ol>
+                  <li><a href="#editing"> Editing</a></li>
+                  <li><a href="#compositing"> Compositing</a></li>
+                  <li><a href="#ai"> AI</a></li>
+                </ol>
+              </li>
+              <li>
+                <a href="#distribution">Distribution</a>
+                <ol>
+                  <li>
+                    <a href="#where-are-the-people%3F"> Where are the people?</a>
+                  </li>
+                  <li>
+                    <a href="#first-act-on-youtube"> First Act on Youtube</a>
+                  </li>
+                </ol>
+              </li>
+            </ol>
+          </nav>
+        </div>
 
           <p>
             In the future,
             <span name="story-idea">anyone with a story idea</span> will be able
             to develop and visualize their story without technical limitations.
-            They'll be able to direct a visual story by themselves. They'll be
-            able to collaborate real time, building virtual scenes with people
+            They'll be able to direct a visual story by themselves.
+            They'll be able to collaborate real time, building virtual scenes with people
             next to them or in different countries. They'll be able to iterate
             freely and easily to make their stories better.
           </p>
@@ -167,6 +166,13 @@
           <aside name="story-idea">
             This is a sidenote. It explains some stuff. Anything can go here!
           </aside>
+
+          <figure class="w-column">
+            <img src="wide-image.jpg" />
+            <figcaption>
+              This is the caption for the full-column image. Maybe it could be a sidenote?
+            </figcaption>
+          </figure>
 
           <h2 id="1.-story-development">
             <a class="header-anchor" href="#1.-story-development">¶</a>Example H2
@@ -188,12 +194,16 @@
             This is a sidenote. It explains some stuff. Anything can go here! Angel Adept Blind Bodice Clique Coast Dunce Docile Enact Eosin Furlong Focal Gnome Gondola Human Hoist Inlet Iodine Justin Jocose Knoll Koala Linden Loads Milliner Modal Number Nodule Onset Oddball Pneumo Poncho Quanta Qophs Rhone Roman Snout Sodium Tundra Tocsin Uncle Udder Vulcan Vocal Whale Woman Xmas Xenon Yunnan Young Zloty Zodiac.
           </aside>
 
+
           <p>
+            <img src="wide-image.jpg" class="float-right" />
             In the future, any person with a story idea will be able to produce
             their stories into full reality. They won't be restricted by where
             they came from or who they are now, but rather, empowered because of
             where they came from and who they are now. They won't worry about
-            money or possessing technology. They will have a place to create
+            money or possessing technology.
+            <img src="wide-image.jpg" class="float-left" />
+            They will have a place to create
             stories, find others to work with, and find audiences that connect
             with their work. They will be free to play and explore creative story
             ideas ultimately creating visual stories with their most valuable
@@ -261,6 +271,13 @@
             This is another sidenote. It explains some stuff. Anything can go
             here!
           </aside>
+
+          <figure class="w-grid">
+            <img src="wide-image.jpg" />
+            <figcaption>
+              This is the caption for the full-grid image.
+            </figcaption>
+          </figure>
 
           <h2>1. Story Development</h2>
           <p>
@@ -1198,11 +1215,10 @@
 </p>
 <p>Make the best shit. Put your shit out there and don’t be a coward.</p>
 
-        </article>
-      </main>
-
       <div class="right-sidebar">
       </div>
+
+      </main>
 
       <footer>
         <div class="mobile-pad flex">
