fix sidebar for 3000px+ viewports

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <main class="relative">
 
-        <div class="left-sidebar">
+        <div class="left-sidebar flex-row justify-end items-start">
           <nav class="toc table-of-contents">
             <ol>
               <li>
