--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
             </figcaption>
           </figure>
 
+          <figure class="w-large">
+            <img src="wide-image.jpg" />
+            <figcaption>
+              This is the caption for the large image.
+            </figcaption>
+          </figure>
+
           <h2 id="1.-story-development">
             <a class="header-anchor" href="#1.-story-development">¶</a>Example H2
           </h2>
